<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="28dp"
    android:background="@color/white">

    <!--    <ImageView-->
    <!--        android:id="@+id/imvExit"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        android:src="@drawable/ic_left_arrow"-->
    <!--        android:layout_marginTop="25dp" />-->

    <TextView
        android:id="@+id/tvLabel"
        android:text="@string/str_login"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvLabelUser"
        app:layout_constraintTop_toBottomOf="@id/tvLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="64dp"
        android:id="@+id/tvLabelEmail"
        android:textColor="#898A8D"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvLabelEmail"
        android:paddingVertical="18dp"
        android:paddingHorizontal="16dp"
        android:textColor="#242E37"
        android:textStyle="bold"
        android:inputType="text"
        android:background="@drawable/bg_edt"
        android:layout_marginTop="16dp" />

    <!--    <com.nguyencuong.project84soft.custom.CustomTextInputLayout-->
    <!--        android:id="@+id/edtEmail"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:hint="@string/tvLabelEmail"-->
    <!--        app:helperTextTextColor="@color/red"-->
    <!--        android:layout_marginTop="64dp"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tvLabel"-->
    <!--        android:paddingVertical="14dp" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvLabelPass"
        android:id="@+id/tvLabelPass"
        app:layout_constraintTop_toBottomOf="@id/edtUsername"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="#898A8D"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvLabelPass"
        android:paddingVertical="18dp"
        android:paddingHorizontal="16dp"
        android:inputType="textPassword"
        android:textColor="#242E37"
        android:textStyle="bold"
        android:background="@drawable/bg_edt"
        android:layout_marginTop="16dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/tvLabelForgotPass"
        android:layout_marginTop="16dp"
        android:textColor="#4B545E"
        app:layout_constraintTop_toBottomOf="@id/edtPass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        app:layout_constraintBottom_toTopOf="@id/btnLoginLibrarian"
        android:layout_marginBottom="8dp"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginLibrarian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLoginLibrarian"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn_login" />

<!--    <TextView-->
<!--        android:id="@+id/tvRegister"-->
<!--        android:textColor="#4B545E"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/tvRegister"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        android:layout_marginBottom="52dp"-->
<!--        android:padding="4dp"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintHorizontal_chainStyle="packed" />-->

</androidx.constraintlayout.widget.ConstraintLayout>